# IXR-Jeti-SDK-Wrapper

./: .gitignore  LICENSE  README.md  jeti_wrapper_compat.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: PROJECT_SUMMARY.md  QUICKREF.md  README.md  USAGE_GUIDE.md
examples/: advanced_example.py  interactive_spectrum_measurement  quick_start.py  radio_sample.py  radio_sample_ex.py  spectro_ex_sample.py  sync_sample.py
reports/: jeti_wrapper_SCV-1511-NIR_test_report.md  jeti_wrapper_scb2501uv_test_report.md  jeti_wrapper_test_report.md
src/jeti/: __init__.py  wrapper.py
tests/: __init__.py  test_wrapper.py
